--- a/carac.html
+++ b/carac.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/estilos.css">
     <title>Características</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="carac.html">Características</a></li>
-            <li><a href="fort.html">Fortalezas</a></li>
-            <li><a href="exp.html">Experiencia</a></li>
-            <li><a href="est.html">Estudios</a></li>
+            <a href="index.html">Home</a>
+            <a style="color:red">Características</a>
+            <!-- <><a href="carac.html">Características</a> -->
+            <a href="fort.html">Fortalezas</a>
+            <a href="exp.html">Experiencia</a>
+            <a href="est.html">Estudios</a>
         </ul>
     </nav>
-    <ul>
-        <li>Eficaz</li>
-        <li>Carismatico</li>
-        <li>Comprensivo</li>
-    </ul>
+        <ul class="fondonegro" >
+            <li>Eficaz</li>
+            <li>Carismatico</li>
+            <li>Comprensivo</li>
+        </ul>
 </body>
 </html>
