--- a/est.html
+++ b/est.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/estilos.css">
     <title>Estudios</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="carac.html">Características</a></li>
-            <li><a href="fort.html">Fortalezas</a></li>
-            <li><a href="exp.html">Experiencia</a></li>
-            <li><a href="est.html">Estudios</a></li>
+            <a href="index.html">Home</a>
+            <a href="carac.html">Características</a>
+            <a href="fort.html">Fortalezas</a>
+            <a href="exp.html">Experiencia</a>
+            <a style="color:red">Estudios</a>
+            <!-- <li><a href="est.html">Estudios</a></li> -->
         </ul>
     </nav>
-    <ul>
+    <ul class="fondonegro" >
         <li>Tecnico electrónico</li>
         <li>A2K Oxford Certificated</li>
         <li>Estudié chino 6meses</li>
