--- a/fort.html
+++ b/fort.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/estilos.css">
     <title>Fortalezas</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="carac.html">Características</a></li>
-            <li><a href="fort.html">Fortalezas</a></li>
-            <li><a href="exp.html">Experiencia</a></li>
-            <li><a href="est.html">Estudios</a></li>
+            <a href="index.html">Home</a>
+            <a href="carac.html">Características</a>
+            <a style="color:red">Fortalezas</a>
+            <!-- <a href="fort.html">Fortalezas</a> -->
+            <a href="exp.html">Experiencia</a>
+            <a href="est.html">Estudios</a>
         </ul>
     </nav>
-    <ul>
-        <li>Capacitado</li>
-        <li>Experimentado</li>
-    </ul>
+        <ul class="fondonegro" >
+            <li>Capacitado</li>
+            <li>Experimentado</li>
+        </ul>
 </body>
 </html>
