--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Agus Cervello</h1>
-    <img src="imagenes/coca.jpg" alt="Cocacola" width="100" height="200">
+    <h1 style="text-align: center">CV Cervello Agustín </h1>
+    <img class="clase1" style="color:antiquewhite" src="imagenes/Foto De Perfil.jpg" alt="Foto De Perfil" width="100" height="100">
     <nav>
         <ul>
-            <li>
-                <a class="clase1" href="index.html">Home</a>
-            </li>
-            <li><a class="clase1" href="carac.html">Características</a></li>
-            <li><a class="clase1" href="fort.html">Fortalezas</a></li>
-            <li><a class="clase1" href="exp.html">Experiencia</a></li>
-            <li><a class="clase1" href="est.html">Estudios</a></li>
+            <!-- <li><a class="clase1" href="index.html">Home</a> -->
+            <li><a class="clase1" style="color:red">~Home</a></li>
+            <li><a class="clase1" href="carac.html">~Características</a></li>
+            <li><a class="clase1" href="fort.html">~Fortalezas</a></li>
+            <li><a class="clase1" href="exp.html">~Experiencia</a></li>
+            <li><a class="clase1" href="est.html">~Estudios</a></li>
         </ul>
+
     </nav>
     <div class="caja">contenido</div>
 </body>
