--- a/carac.html
+++ b/carac.html
@@ -10,12 +10,12 @@
 <body>
     <nav>
         <ul>
-            <a href="index.html">Home</a>
-            <a style="color:red">Características</a>
+            <a class="button" href="index.html">Home</a>
+            <a class="estoy">Características</a>
             <!-- <><a href="carac.html">Características</a> -->
-            <a href="fort.html">Fortalezas</a>
-            <a href="exp.html">Experiencia</a>
-            <a href="est.html">Estudios</a>
+            <a class="button" href="fort.html">Fortalezas</a>
+            <a class="button" href="exp.html">Experiencia</a>
+            <a class="button" href="est.html">Estudios</a>
         </ul>
     </nav>
         <ul class="fondonegro" >
