--- a/est.html
+++ b/est.html
@@ -10,11 +10,11 @@
 <body>
     <nav>
         <ul>
-            <a href="index.html">Home</a>
-            <a href="carac.html">Características</a>
-            <a href="fort.html">Fortalezas</a>
-            <a href="exp.html">Experiencia</a>
-            <a style="color:red">Estudios</a>
+            <a class="button" href="index.html">Home</a>
+            <a class="button" href="carac.html">Características</a>
+            <a class="button" href="fort.html">Fortalezas</a>
+            <a class="button" href="exp.html">Experiencia</a>
+            <a class="estoy">Estudios</a>
             <!-- <li><a href="est.html">Estudios</a></li> -->
         </ul>
     </nav>
