--- a/exp.html
+++ b/exp.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/estilos.css">
-    <link rel="stylesheet" href="estilos/fondo.css">
+    <link rel="stylesheet" href="estilos/fondos/fondo4.css">
     <title>Experiencia</title>
 </head>
 <body>
     <nav>
         <ul>
-            <a class="button" href="index.html">Home</a>
-            <a class="button" href="carac.html">Características</a>
-            <a class="button" href="fort.html">Fortalezas</a>
+            <a class="clase1" href="index.html">Home</a>
+            <a class="clase1" href="carac.html">Características</a>
+            <a class="clase1" href="fort.html">Fortalezas</a>
             <a class="estoy">Experiencia</a>
             <!-- <a href="exp.html">Experiencia</a> -->
-            <a class="button" href="est.html">Estudios</a>
+            <a class="clase1" href="est.html">Estudios</a>
         </ul>
     </nav>
     <ul class="fondonegro" >
-        <li>Instalación electrica</li>
-        <li>Instalación de camaras</li>
-        <li>Instalación de paneles solares en UTN</li>
+        ➤Instalación electrica
+        ➤Instalación de camaras
+        ➤Instalación de paneles solares en UTN
     </ul>
 </body>
 </html>
