--- a/fort.html
+++ b/fort.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/estilos.css">
-    <link rel="stylesheet" href="estilos/fondo.css">
+    <link rel="stylesheet" href="estilos/fondos/fondo3.css">
     <title>Fortalezas</title>
 </head>
 <body>
     <nav>
         <ul>
-            <a class="button" href="index.html">Home</a>
-            <a class="button" href="carac.html">Características</a>
+            <a class="clase1" href="index.html">Home</a>
+            <a class="clase1" href="carac.html">Características</a>
             <a class="estoy">Fortalezas</a>
             <!-- <a href="fort.html">Fortalezas</a> -->
-            <a class="button" href="exp.html">Experiencia</a>
-            <a class="button" href="est.html">Estudios</a>
+            <a class="clase1" href="exp.html">Experiencia</a>
+            <a class="clase1" href="est.html">Estudios</a>
         </ul>
     </nav>
-        <ul class="fondonegro" >
-            <li>Capacitado</li>
-            <li>Experimentado</li>
+        <ul class="fondonegro">
+            ➤Capacitado
+            ➤Experimentado
         </ul>
 </body>
 </html>
