--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/estilos.css">
     <title>Home</title>
-    <link rel="stylesheet" href="estilos/fondo.css">
+    <link rel="stylesheet" href="estilos/fondos/fondo1.css">
 </head>
 <body>
     <nav>
         <ul>
             <!-- <li><a class="clase1" href="index.html">Home</a> -->
             <a class="estoy">Home</a>
-            <a class="button" class="clase1" href="carac.html">Características</a>
-            <a class="button" class="clase1" href="fort.html">Fortalezas</a>
-            <a class="button" class="clase1" href="exp.html">Experiencia</a>
-            <a class="button" class="clase1" href="est.html">Estudios</a>
+            <a class="clase1" href="carac.html">Características</a>
+            <a class="clase1" href="fort.html">Fortalezas</a>
+            <a class="clase1" href="exp.html">Experiencia</a>
+            <a class="clase1" href="est.html">Estudios</a>
             <h1 style="text-align: center">CV Cervello Agustín </h1>
             <img class="imag1" src="imagenes/marco.png" width="1" height="100">
             <img src="imagenes/arbol.png" alt="Foto De Perfil" width="100" height="100">
