--- a/carac.html
+++ b/carac.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/estilos.css">
-    <link rel="stylesheet" href="estilos/fondo.css">
+    <link rel="stylesheet" href="estilos/fondos/fondo2.css">
     <title>Características</title>
 </head>
 <body>
     <nav>
         <ul>
-            <a class="button" href="index.html">Home</a>
+            <a class="clase1" href="index.html">Home</a>
             <a class="estoy">Características</a>
             <!-- <><a href="carac.html">Características</a> -->
-            <a class="button" href="fort.html">Fortalezas</a>
-            <a class="button" href="exp.html">Experiencia</a>
-            <a class="button" href="est.html">Estudios</a>
+            <a class="clase1" href="fort.html">Fortalezas</a>
+            <a class="clase1" href="exp.html">Experiencia</a>
+            <a class="clase1" href="est.html">Estudios</a>
         </ul>
     </nav>
         <ul class="fondonegro" >
-            <li>Eficaz</li>
-            <li>Carismatico</li>
-            <li>Comprensivo</li>
+            ➤Eficaz
+            ➤Carismatico
+            ➤Comprensivo
         </ul>
 </body>
 </html>
