--- a/est.html
+++ b/est.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/estilos.css">
-    <link rel="stylesheet" href="estilos/fondo.css">
+    <link rel="stylesheet" href="estilos/fondos/fondo5.css">
     <title>Estudios</title>
 </head>
 <body>
     <nav>
         <ul>
-            <a class="button" href="index.html">Home</a>
-            <a class="button" href="carac.html">Características</a>
-            <a class="button" href="fort.html">Fortalezas</a>
-            <a class="button" href="exp.html">Experiencia</a>
+            <a class="clase1" href="index.html">Home</a>
+            <a class="clase1" href="carac.html">Características</a>
+            <a class="clase1" href="fort.html">Fortalezas</a>
+            <a class="clase1" href="exp.html">Experiencia</a>
             <a class="estoy">Estudios</a>
             <!-- <li><a href="est.html">Estudios</a></li> -->
         </ul>
     </nav>
     <ul class="fondonegro" >
-        <li>Tecnico electrónico</li>
-        <li>A2K Oxford Certificated</li>
-        <li>Estudié chino 6meses</li>
+        ➤Tecnico electrónico
+        ➤A2K Oxford Certificated
+        ➤Estudié chino 6meses
     </ul>
 </body>
 </html>
