--- a/carac.html
+++ b/carac.html
@@ -10,19 +10,24 @@
 </head>
 <body>
     <nav>
-        <ul>
-            <a class="clase1" href="index.html">Home</a>
-            <a class="estoy">Características</a>
-            <!-- <><a href="carac.html">Características</a> -->
-            <a class="clase1" href="fort.html">Fortalezas</a>
-            <a class="clase1" href="exp.html">Experiencia</a>
-            <a class="clase1" href="est.html">Estudios</a>
+        <ul class="margintop">
+            <li>
+                <a class="clase1 margin" href="index.html">Home</a>
+                <a class="estoy">Características</a>
+                <!-- <><a href="carac.html">Características</a> -->
+                <a class="clase1" href="fort.html">Fortalezas</a>
+                <a class="clase1" href="exp.html">Experiencia</a>
+                <a class="clase1" href="est.html">Estudios</a>
+            </li>
+
         </ul>
     </nav>
-        <ul class="fondonegro" >
-            ➤Eficaz
-            ➤Carismatico
-            ➤Comprensivo
+        <ul class="fondonegro">
+            <li>
+                <a>➤Eficaz</a>
+                <a>➤Carismatico</a>
+                <a>➤Comprensivo</a>
+            </li>
         </ul>
 </body>
 </html>
