--- a/exp.html
+++ b/exp.html
@@ -10,13 +10,15 @@
 </head>
 <body>
     <nav>
-        <ul>
-            <a class="clase1" href="index.html">Home</a>
-            <a class="clase1" href="carac.html">Características</a>
-            <a class="clase1" href="fort.html">Fortalezas</a>
-            <a class="estoy">Experiencia</a>
-            <!-- <a href="exp.html">Experiencia</a> -->
-            <a class="clase1" href="est.html">Estudios</a>
+        <ul class="margintop">
+            <li>
+                <a class="clase1 margin" href="index.html">Home</a>
+                <a class="clase1" href="carac.html">Características</a>
+                <a class="clase1" href="fort.html">Fortalezas</a>
+                <a class="estoy">Experiencia</a>
+                <!-- <a href="exp.html">Experiencia</a> -->
+                <a class="clase1" href="est.html">Estudios</a>
+            </li>
         </ul>
     </nav>
     <ul class="fondonegro" >
