--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 </head>
 <body>
     <nav>
-        <ul>
-            <!-- <li><a class="clase1" href="index.html">Home</a> -->
-            <a class="estoy">Home</a>
-            <a class="clase1" href="carac.html">Características</a>
-            <a class="clase1" href="fort.html">Fortalezas</a>
-            <a class="clase1" href="exp.html">Experiencia</a>
-            <a class="clase1" href="est.html">Estudios</a>
-            <h1 style="text-align: center">CV Cervello Agustín </h1>
-            <img class="imag1" src="imagenes/marco.png" width="1" height="100">
-            <img src="imagenes/arbol.png" alt="Foto De Perfil" width="100" height="100">
-            <img src="imagenes/marco.png" width="1" height="100">
+        <ul class="margintop">
+            <li>
+                <!-- <a class="clase1" href="index.html">Home</a> -->
+                <a class="estoy margin">Home</a>
+                <a class="clase1" href="carac.html">Características</a>
+                <a class="clase1" href="fort.html">Fortalezas</a>
+                <a class="clase1" href="exp.html">Experiencia</a>
+                <a class="clase1" href="est.html">Estudios</a>
+                <h1 style="text-align: center">CV Cervello Agustín </h1>
+                <img src="imagenes/arbol.png" alt="Foto De Perfil" class="imag1" width="100" height="100">
+            </li>
         </ul>
     </nav>
 </body>
