--- a/est.html
+++ b/est.html
@@ -10,13 +10,15 @@
 </head>
 <body>
     <nav>
-        <ul>
-            <a class="clase1" href="index.html">Home</a>
-            <a class="clase1" href="carac.html">Características</a>
-            <a class="clase1" href="fort.html">Fortalezas</a>
-            <a class="clase1" href="exp.html">Experiencia</a>
-            <a class="estoy">Estudios</a>
-            <!-- <li><a href="est.html">Estudios</a></li> -->
+        <ul class="margintop">
+            <li>
+                <a class="clase1 margin" href="index.html">Home</a>
+                <a class="clase1" href="carac.html">Características</a>
+                <a class="clase1" href="fort.html">Fortalezas</a>
+                <a class="clase1" href="exp.html">Experiencia</a>
+                <a class="estoy">Estudios</a>
+                <!-- <li><a href="est.html">Estudios</a></li> -->
+            </li>
         </ul>
     </nav>
     <ul class="fondonegro" >
