--- a/est.html
+++ b/est.html
@@ -18,6 +18,7 @@
                 <a class="clase1" href="exp.html">Experiencia</a>
                 <a class="estoy">Estudios</a>
                 <!-- <li><a href="est.html">Estudios</a></li> -->
+                <a class="clase1" href="foto.html">Foto</a>
             </li>
         </ul>
     </nav>
