--- a/exp.html
+++ b/exp.html
@@ -18,6 +18,7 @@
                 <a class="estoy">Experiencia</a>
                 <!-- <a href="exp.html">Experiencia</a> -->
                 <a class="clase1" href="est.html">Estudios</a>
+                <a class="clase1" href="foto.html">Foto</a>
             </li>
         </ul>
     </nav>
