--- a/foto.html
+++ b/foto.html
@@ -13,22 +13,15 @@
         <ul class="margintop">
             <li>
                 <a class="clase1 margin" href="index.html">Home</a>
-                <a class="estoy">Características</a>
+                <a class="clase1" href="fort.html">Caracteristicas</a>
                 <!-- <><a href="carac.html">Características</a> -->
                 <a class="clase1" href="fort.html">Fortalezas</a>
                 <a class="clase1" href="exp.html">Experiencia</a>
                 <a class="clase1" href="est.html">Estudios</a>
-                <a class="clase1" href="foto.html">Foto</a>
+                <a class="estoy">Foto</a>
+                <img src="imagenes/fotodeperfil.png" class="imag2" alt="Foto De Perfil" width="200" height="200">
             </li>
-
         </ul>
     </nav>
-        <ul class="fondonegro">
-            <li>
-                <a>➤Eficaz</a>
-                <a>➤Carismatico</a>
-                <a>➤Comprensivo</a>
-            </li>
-        </ul>
 </body>
 </html>
