--- a/fort.html
+++ b/fort.html
@@ -18,6 +18,7 @@
                 <!-- <a href="fort.html">Fortalezas</a> -->
                 <a class="clase1" href="exp.html">Experiencia</a>
                 <a class="clase1" href="est.html">Estudios</a>
+                <a class="clase1" href="foto.html">Foto</a>
             </li>
         </ul>
     </nav>
