--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a class="clase1" href="fort.html">Fortalezas</a>
                 <a class="clase1" href="exp.html">Experiencia</a>
                 <a class="clase1" href="est.html">Estudios</a>
+                <a class="clase1" href="foto.html">Foto</a>
                 <h1 style="text-align: center">CV Cervello Agustín </h1>
                 <img src="imagenes/arbol.png" alt="Foto De Perfil" class="imag1" width="100" height="100">
             </li>
