--- a/est.html
+++ b/est.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/fondos/fondo5.css">
     <title>Estudios</title>
 </head>
-<body>
+<body class="fondo5">
     <nav>
         <ul class="margintop">
             <li>
@@ -23,9 +23,9 @@
         </ul>
     </nav>
     <ul class="fondonegro" >
-        ➤Tecnico electrónico
-        ➤A2K Oxford Certificated
-        ➤Estudié chino 6meses
+        <li>➤Tecnico electrónico</li>
+        <li>➤A2K Oxford Certificated</li>
+        <li>➤Estudié chino 6meses</li>
     </ul>
 </body>
 </html>
