--- a/fort.html
+++ b/fort.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/fondos/fondo3.css">
     <title>Fortalezas</title>
 </head>
-<body>
+<body class="fondo3">
     <nav>
         <ul class="margintop">
             <li>
@@ -23,8 +23,8 @@
         </ul>
     </nav>
         <ul class="fondonegro">
-            ➤Capacitado
-            ➤Experimentado
+            <li>➤Capacitado</li> 
+            <li>➤Experimentado</li>
         </ul>
 </body>
 </html>
