--- a/foto.html
+++ b/foto.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/estilos.css">
-    <link rel="stylesheet" href="estilos/fondos/fondo2.css">
-    <title>Características</title>
+    <link rel="stylesheet" href="estilos/fondos/fondo6.css">
+    <title>Foto</title>
 </head>
-<body>
+<body class="fondo6">
     <nav>
         <ul class="margintop">
             <li>
