--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="estilos/fondos/fondo1.css">
 </head>
-<body>
+<body class="fondo1">
     <nav>
         <ul class="margintop">
             <li>
