--- a/carac.html
+++ b/carac.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/fondos/fondo2.css">
     <title>Características</title>
 </head>
-<body>
+<body class="fondo2">
     <nav>
         <ul class="margintop">
             <li>
@@ -20,15 +20,12 @@
                 <a class="clase1" href="est.html">Estudios</a>
                 <a class="clase1" href="foto.html">Foto</a>
             </li>
-
         </ul>
     </nav>
         <ul class="fondonegro">
-            <li>
-                <a>➤Eficaz</a>
-                <a>➤Carismatico</a>
-                <a>➤Comprensivo</a>
-            </li>
+            <li>➤Eficaz</li>
+            <li>➤Carismatico</li>
+            <li>➤Comprensivo</li>
         </ul>
 </body>
 </html>
