--- a/exp.html
+++ b/exp.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/fondos/fondo4.css">
     <title>Experiencia</title>
 </head>
-<body>
+<body class="fondo4">
     <nav>
         <ul class="margintop">
             <li>
@@ -23,9 +23,9 @@
         </ul>
     </nav>
     <ul class="fondonegro" >
-        ➤Instalación electrica
-        ➤Instalación de camaras
-        ➤Instalación de paneles solares en UTN
+        <li>➤Instalación electrica</li>
+        <li>➤Instalación de camaras</li>
+        <li>➤Instalación de paneles solares en UTN</li>
     </ul>
 </body>
 </html>
